--- a/app/src/main/res/layout/activity_alarm_setter.xml
+++ b/app/src/main/res/layout/activity_alarm_setter.xml
@@ -18,7 +18,7 @@
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
-            tools:context="aenadon.wienerlinienalarm.AlarmSetterActivity">
+            tools:context="aenadon.wienerlinienalarm.activities.AlarmSetterActivity">
 
             <TextView
                 android:layout_width="match_parent"
