--- a/app/src/main/res/layout/activity_station_picker.xml
+++ b/app/src/main/res/layout/activity_station_picker.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="aenadon.wienerlinienalarm.StationPicker">
+    tools:context="aenadon.wienerlinienalarm.activities.StationPickerActivity">
 
     <EditText
         android:id="@+id/station_search_edittext"
