--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="aenadon.wienerlinienalarm.MainActivity$AlarmMenuFragment">
+    tools:context="aenadon.wienerlinienalarm.activities.MainActivity$AlarmMenuFragment">
 
     <ListView
         android:id="@+id/alarm_list"
