--- a/app/src/main/res/layout/dialog_edit_alarm.xml
+++ b/app/src/main/res/layout/dialog_edit_alarm.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/activity_horizontal_margin">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:padding="@dimen/activity_horizontal_margin"
+    tools:context=".activities.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,12 +13,14 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/date_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Date"
             android:textAppearance="@style/SectionTitleText" />
 
         <LinearLayout
+            android:id="@+id/date_box"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -28,14 +31,48 @@
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
                 android:textSize="14sp"
-                android:text="12.34.5678" />
+                android:onClick="onClickHandler"/>
 
             <ImageView
                 android:id="@+id/date_edit"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                app:srcCompat="@drawable/ic_edit"/>
+                app:srcCompat="@drawable/ic_edit"
+                android:onClick="onClickHandler" />
+
+        </LinearLayout>
+
+        <TextView
+            android:visibility="gone"
+            android:id="@+id/days_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Days"
+            android:textAppearance="@style/SectionTitleText" />
+
+        <LinearLayout
+            android:visibility="gone"
+            android:id="@+id/days_box"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/days"
+                android:layout_weight="9"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:textSize="14sp"
+                android:onClick="onClickHandler"/>
+
+            <ImageView
+                android:id="@+id/days_edit"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                app:srcCompat="@drawable/ic_edit"
+                android:onClick="onClickHandler"/>
 
         </LinearLayout>
 
@@ -56,14 +93,15 @@
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
                 android:textSize="14sp"
-                android:text="12:34"/>
+                android:onClick="onClickHandler"/>
 
             <ImageView
                 android:id="@+id/time_edit"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                app:srcCompat="@drawable/ic_edit"/>
+                app:srcCompat="@drawable/ic_edit"
+                android:onClick="onClickHandler"/>
 
         </LinearLayout>
 
@@ -84,14 +122,15 @@
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
                 android:textSize="14sp"
-                android:text="Standard-Klingelton (Klingelton1)"/>
+                android:onClick="onClickHandler"/>
 
             <ImageView
                 android:id="@+id/ringtone_edit"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                app:srcCompat="@drawable/ic_edit"/>
+                app:srcCompat="@drawable/ic_edit"
+                android:onClick="onClickHandler"/>
 
         </LinearLayout>
 
@@ -112,14 +151,15 @@
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
                 android:textSize="14sp"
-                android:text="Short"/>
+                android:onClick="onClickHandler"/>
 
             <ImageView
                 android:id="@+id/vibration_edit"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                app:srcCompat="@drawable/ic_edit"/>
+                app:srcCompat="@drawable/ic_edit"
+                android:onClick="onClickHandler"/>
 
         </LinearLayout>
 
@@ -140,14 +180,15 @@
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
                 android:textSize="14sp"
-                android:text="Computerstr./Gutheil-Schoder-G\n16A Hetzendorf\nMorelines\neven\nmore\nnew\nlines!"/>
+                android:onClick="onClickHandler"/>
 
             <ImageView
                 android:id="@+id/station_edit"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                app:srcCompat="@drawable/ic_edit"/>
+                app:srcCompat="@drawable/ic_edit"
+                android:onClick="onClickHandler"/>
 
         </LinearLayout>
 
