--- a/app/src/main/res/layout/dialog_edit_alarm.xml
+++ b/app/src/main/res/layout/dialog_edit_alarm.xml
@@ -1,198 +1,242 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:padding="@dimen/activity_horizontal_margin"
-    tools:context=".activities.MainActivity"
+    tools:context=".activities.DialogEditActivity"
     tools:ignore="ContentDescription">
 
+    <ScrollView
+        android:id="@+id/content_box"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:padding="@dimen/activity_horizontal_margin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/date_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/date"
+                android:textAppearance="@style/SectionTitleText" />
+
+            <LinearLayout
+                android:id="@+id/date_box"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/date"
+                    android:layout_weight="9"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:textSize="14sp"
+                    android:onClick="onClickHandler"/>
+
+                <ImageView
+                    android:id="@+id/date_edit"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    app:srcCompat="@drawable/ic_edit"
+                    android:onClick="onClickHandler" />
+
+            </LinearLayout>
+
+            <TextView
+                android:visibility="gone"
+                android:id="@+id/days_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/days"
+                android:textAppearance="@style/SectionTitleText" />
+
+            <LinearLayout
+                android:visibility="gone"
+                android:id="@+id/days_box"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/days"
+                    android:layout_weight="9"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:textSize="14sp"
+                    android:onClick="onClickHandler"/>
+
+                <ImageView
+                    android:id="@+id/days_edit"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    app:srcCompat="@drawable/ic_edit"
+                    android:onClick="onClickHandler"/>
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/time"
+                android:textAppearance="@style/SectionTitleText" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/time"
+                    android:layout_weight="9"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:textSize="14sp"
+                    android:onClick="onClickHandler"/>
+
+                <ImageView
+                    android:id="@+id/time_edit"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    app:srcCompat="@drawable/ic_edit"
+                    android:onClick="onClickHandler"/>
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/ringtone"
+                android:textAppearance="@style/SectionTitleText" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/ringtone"
+                    android:layout_weight="9"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:textSize="14sp"
+                    android:onClick="onClickHandler"/>
+
+                <ImageView
+                    android:id="@+id/ringtone_edit"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    app:srcCompat="@drawable/ic_edit"
+                    android:onClick="onClickHandler"/>
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/vibration"
+                android:textAppearance="@style/SectionTitleText" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/vibration"
+                    android:layout_weight="9"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:textSize="14sp"
+                    android:onClick="onClickHandler"/>
+
+                <ImageView
+                    android:id="@+id/vibration_edit"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    app:srcCompat="@drawable/ic_edit"
+                    android:onClick="onClickHandler"/>
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/station"
+                android:textAppearance="@style/SectionTitleText" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/station"
+                    android:layout_weight="9"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:textSize="14sp"
+                    android:onClick="onClickHandler"/>
+
+                <ImageView
+                    android:id="@+id/station_edit"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    app:srcCompat="@drawable/ic_edit"
+                    android:onClick="onClickHandler"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </ScrollView>
+
     <LinearLayout
+        android:id="@+id/dialog_button_bar"
+        style="?android:buttonBarStyle"
+        android:layout_below="@id/content_box"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/date_title"
-            android:layout_width="match_parent"
+        android:weightSum="3"
+        android:gravity="center">
+        <Button
+            android:layout_weight="1"
+            android:id="@+id/dialog_button_delete"
+            style="?android:buttonBarButtonStyle"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/date"
-            android:textAppearance="@style/SectionTitleText" />
-
-        <LinearLayout
-            android:id="@+id/date_box"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/date"
-                android:layout_weight="9"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:textSize="14sp"
-                android:onClick="onClickHandler"/>
-
-            <ImageView
-                android:id="@+id/date_edit"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                app:srcCompat="@drawable/ic_edit"
-                android:onClick="onClickHandler" />
-
-        </LinearLayout>
-
-        <TextView
-            android:visibility="gone"
-            android:id="@+id/days_title"
-            android:layout_width="match_parent"
+            android:text="@string/delete"
+            android:onClick="onClickHandler" />
+        <Button
+            android:layout_weight="1"
+            android:id="@+id/dialog_button_cancel"
+            style="?android:buttonBarButtonStyle"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/days"
-            android:textAppearance="@style/SectionTitleText" />
-
-        <LinearLayout
-            android:visibility="gone"
-            android:id="@+id/days_box"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/days"
-                android:layout_weight="9"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:textSize="14sp"
-                android:onClick="onClickHandler"/>
-
-            <ImageView
-                android:id="@+id/days_edit"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                app:srcCompat="@drawable/ic_edit"
-                android:onClick="onClickHandler"/>
-
-        </LinearLayout>
-
-        <TextView
-            android:layout_width="match_parent"
+            android:text="@string/cancel"
+            android:onClick="onClickHandler" />
+        <Button
+            android:layout_weight="1"
+            android:id="@+id/dialog_button_ok"
+            style="?android:buttonBarButtonStyle"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/time"
-            android:textAppearance="@style/SectionTitleText" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/time"
-                android:layout_weight="9"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:textSize="14sp"
-                android:onClick="onClickHandler"/>
-
-            <ImageView
-                android:id="@+id/time_edit"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                app:srcCompat="@drawable/ic_edit"
-                android:onClick="onClickHandler"/>
-
-        </LinearLayout>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/ringtone"
-            android:textAppearance="@style/SectionTitleText" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/ringtone"
-                android:layout_weight="9"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:textSize="14sp"
-                android:onClick="onClickHandler"/>
-
-            <ImageView
-                android:id="@+id/ringtone_edit"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                app:srcCompat="@drawable/ic_edit"
-                android:onClick="onClickHandler"/>
-
-        </LinearLayout>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/vibration"
-            android:textAppearance="@style/SectionTitleText" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/vibration"
-                android:layout_weight="9"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:textSize="14sp"
-                android:onClick="onClickHandler"/>
-
-            <ImageView
-                android:id="@+id/vibration_edit"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                app:srcCompat="@drawable/ic_edit"
-                android:onClick="onClickHandler"/>
-
-        </LinearLayout>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/station"
-            android:textAppearance="@style/SectionTitleText" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/station"
-                android:layout_weight="9"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:textSize="14sp"
-                android:onClick="onClickHandler"/>
-
-            <ImageView
-                android:id="@+id/station_edit"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                app:srcCompat="@drawable/ic_edit"
-                android:onClick="onClickHandler"/>
-
-        </LinearLayout>
-
+            android:text="@string/ok"
+            android:onClick="onClickHandler" />
     </LinearLayout>
 
-</ScrollView>
+</RelativeLayout>
