--- a/app/src/main/res/layout/dialog_edit_alarm.xml
+++ b/app/src/main/res/layout/dialog_edit_alarm.xml
@@ -5,214 +5,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".activities.DialogEditActivity"
     tools:ignore="ContentDescription">
 
-    <ScrollView
-        android:id="@+id/content_box"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <LinearLayout
-            android:padding="@dimen/activity_horizontal_margin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/date_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/date"
-                android:textAppearance="@style/SectionTitleText" />
-
-            <LinearLayout
-                android:id="@+id/date_box"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@+id/date"
-                    android:layout_weight="9"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical"
-                    android:textSize="14sp"
-                    android:onClick="onClickHandler"/>
-
-                <ImageView
-                    android:id="@+id/date_edit"
-                    android:layout_weight="1"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    app:srcCompat="@drawable/ic_edit"
-                    android:onClick="onClickHandler" />
-
-            </LinearLayout>
-
-            <TextView
-                android:visibility="gone"
-                android:id="@+id/days_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/days"
-                android:textAppearance="@style/SectionTitleText" />
-
-            <LinearLayout
-                android:visibility="gone"
-                android:id="@+id/days_box"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@+id/days"
-                    android:layout_weight="9"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical"
-                    android:textSize="14sp"
-                    android:onClick="onClickHandler"/>
-
-                <ImageView
-                    android:id="@+id/days_edit"
-                    android:layout_weight="1"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    app:srcCompat="@drawable/ic_edit"
-                    android:onClick="onClickHandler"/>
-
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/time"
-                android:textAppearance="@style/SectionTitleText" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@+id/time"
-                    android:layout_weight="9"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical"
-                    android:textSize="14sp"
-                    android:onClick="onClickHandler"/>
-
-                <ImageView
-                    android:id="@+id/time_edit"
-                    android:layout_weight="1"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    app:srcCompat="@drawable/ic_edit"
-                    android:onClick="onClickHandler"/>
-
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/ringtone"
-                android:textAppearance="@style/SectionTitleText" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@+id/ringtone"
-                    android:layout_weight="9"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical"
-                    android:textSize="14sp"
-                    android:onClick="onClickHandler"/>
-
-                <ImageView
-                    android:id="@+id/ringtone_edit"
-                    android:layout_weight="1"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    app:srcCompat="@drawable/ic_edit"
-                    android:onClick="onClickHandler"/>
-
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/vibration"
-                android:textAppearance="@style/SectionTitleText" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@+id/vibration"
-                    android:layout_weight="9"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical"
-                    android:textSize="14sp"
-                    android:onClick="onClickHandler"/>
-
-                <ImageView
-                    android:id="@+id/vibration_edit"
-                    android:layout_weight="1"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    app:srcCompat="@drawable/ic_edit"
-                    android:onClick="onClickHandler"/>
-
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/station"
-                android:textAppearance="@style/SectionTitleText" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@+id/station"
-                    android:layout_weight="9"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical"
-                    android:textSize="14sp"
-                    android:onClick="onClickHandler"/>
-
-                <ImageView
-                    android:id="@+id/station_edit"
-                    android:layout_weight="1"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    app:srcCompat="@drawable/ic_edit"
-                    android:onClick="onClickHandler"/>
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-    </ScrollView>
-
+    <!-- Button bar solution from:
+            http://stackoverflow.com/questions/2318775/how-to-create-fixed-footer-in-android-layout#5796606 -->
     <LinearLayout
         android:id="@+id/dialog_button_bar"
+        android:layout_alignParentBottom="true"
         style="?android:buttonBarStyle"
-        android:layout_below="@id/content_box"
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:weightSum="3"
-        android:gravity="center">
+        android:layout_height="wrap_content">
         <Button
             android:layout_weight="1"
             android:id="@+id/dialog_button_delete"
@@ -238,5 +43,203 @@
             android:text="@string/ok"
             android:onClick="onClickHandler" />
     </LinearLayout>
+    <!--TODO why is there extra space between the title and the content?-->
+    <ScrollView
+        android:layout_above="@id/dialog_button_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+
+            android:layout_margin="@dimen/activity_horizontal_margin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/dialog_date_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/date"
+                android:textAppearance="@style/SectionTitleText" />
+
+            <LinearLayout
+                android:id="@+id/dialog_date_box"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/dialog_date_text"
+                    android:layout_weight="9"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:textSize="14sp"
+                    android:onClick="onClickHandler"/>
+
+                <ImageView
+                    android:id="@+id/dialog_date_edit"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    app:srcCompat="@drawable/ic_edit"
+                    android:onClick="onClickHandler" />
+
+            </LinearLayout>
+
+            <TextView
+                android:visibility="gone"
+                android:id="@+id/dialog_days_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/days"
+                android:textAppearance="@style/SectionTitleText" />
+
+            <LinearLayout
+                android:visibility="gone"
+                android:id="@+id/dialog_days_box"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/dialog_days_text"
+                    android:layout_weight="9"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:textSize="14sp"
+                    android:onClick="onClickHandler"/>
+
+                <ImageView
+                    android:id="@+id/dialog_days_edit"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    app:srcCompat="@drawable/ic_edit"
+                    android:onClick="onClickHandler"/>
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/time"
+                android:textAppearance="@style/SectionTitleText" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/dialog_time_text"
+                    android:layout_weight="9"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:textSize="14sp"
+                    android:onClick="onClickHandler"/>
+
+                <ImageView
+                    android:id="@+id/dialog_time_edit"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    app:srcCompat="@drawable/ic_edit"
+                    android:onClick="onClickHandler"/>
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/ringtone"
+                android:textAppearance="@style/SectionTitleText" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/dialog_ringtone_text"
+                    android:layout_weight="9"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:textSize="14sp"
+                    android:onClick="onClickHandler"/>
+
+                <ImageView
+                    android:id="@+id/dialog_ringtone_edit"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    app:srcCompat="@drawable/ic_edit"
+                    android:onClick="onClickHandler"/>
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/dialog_vibration_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/vibration"
+                android:textAppearance="@style/SectionTitleText" />
+
+            <LinearLayout
+                android:id="@+id/dialog_vibration_box"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/dialog_vibration_text"
+                    android:layout_weight="9"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:textSize="14sp"
+                    android:onClick="onClickHandler"/>
+
+                <ImageView
+                    android:id="@+id/dialog_vibration_edit"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    app:srcCompat="@drawable/ic_edit"
+                    android:onClick="onClickHandler"/>
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/station"
+                android:textAppearance="@style/SectionTitleText" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/dialog_station_text"
+                    android:layout_weight="9"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:textSize="14sp"
+                    android:onClick="onClickHandler"/>
+
+                <ImageView
+                    android:id="@+id/dialog_station_edit"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    app:srcCompat="@drawable/ic_edit"
+                    android:onClick="onClickHandler"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </RelativeLayout>
