Fixed dialog dead space

--- a/app/src/main/res/layout/dialog_edit_alarm.xml
+++ b/app/src/main/res/layout/dialog_edit_alarm.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -10,15 +10,18 @@
     tools:context=".activities.DialogEditActivity"
     tools:ignore="ContentDescription">
 
-    <ScrollView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <LinearLayout
-            android:layout_margin="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="@dimen/activity_horizontal_margin"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:id="@+id/content">
 
             <TextView
                 android:id="@+id/dialog_date_title"
@@ -204,40 +207,42 @@
 
         </LinearLayout>
 
-    </ScrollView>
+        <!-- Button bar solution from:
+    http://stackoverflow.com/questions/2318775/how-to-create-fixed-footer-in-android-layout#5796606 -->
+        <LinearLayout
+            android:id="@+id/dialog_button_bar"
+            android:layout_below="@id/content"
+            style="?android:buttonBarStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <Button
+                android:layout_weight="1"
+                android:id="@+id/dialog_button_cancel"
+                style="?android:buttonBarButtonStyle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/cancel"
+                android:onClick="onClickHandler" />
+            <Button
+                android:layout_weight="1"
+                android:id="@+id/dialog_button_delete"
+                style="?android:buttonBarButtonStyle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/delete"
+                android:onClick="onClickHandler" />
+            <Button
+                android:layout_weight="1"
+                android:id="@+id/dialog_button_ok"
+                style="?android:buttonBarButtonStyle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/ok"
+                android:onClick="onClickHandler" />
+        </LinearLayout>
 
-    <!-- Button bar solution from:
-        http://stackoverflow.com/questions/2318775/how-to-create-fixed-footer-in-android-layout#5796606 -->
-    <LinearLayout
-        android:id="@+id/dialog_button_bar"
-        android:layout_alignParentBottom="true"
-        style="?android:buttonBarStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <Button
-            android:layout_weight="1"
-            android:id="@+id/dialog_button_cancel"
-            style="?android:buttonBarButtonStyle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/cancel"
-            android:onClick="onClickHandler" />
-        <Button
-            android:layout_weight="1"
-            android:id="@+id/dialog_button_delete"
-            style="?android:buttonBarButtonStyle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/delete"
-            android:onClick="onClickHandler" />
-        <Button
-            android:layout_weight="1"
-            android:id="@+id/dialog_button_ok"
-            style="?android:buttonBarButtonStyle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/ok"
-            android:onClick="onClickHandler" />
-    </LinearLayout>
+    </RelativeLayout>
 
-</RelativeLayout>
+
+
+</ScrollView>
