Added empty list placeholder, cleaned up code a little

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#F44336</color>
     <color name="colorPrimaryDark">#D32F2F</color>
     <color name="colorAccent">#009688</color>
+
+    <color name="placeholderGray">#CCCCCC</color>
 </resources>
